# snowbar

./: CMakeLists.txt  README.md
filewatcher/source/: FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherWin32.cpp
gtest/: example.cpp
http/: graph.html  index.html  index.html~
http/js/: reusable_chart.js
json/include/: enable_if.hpp
json/json/: json_serialize.hpp
snowbar/include/: icsocket.hpp  ipv4addr.hpp  socketserver.h
snowbar/source/: base64-decode.c  icsocket.cpp  ipv4addr.cpp  main.cpp  sha-1.c  simplesocket.cpp  socketserver.cpp
test/: Functions.cpp  Functions_tests.cpp  functions.h  test.txt  test1.xml  test2.xml  test3.xml  test4.xml  test5.xml  test6.xml  testONE.xml
xml/include/: SimpleXML.hpp
xml/source/: SimpleXML.cpp
